--- a/src/style/global.css
+++ b/src/style/global.css
@@ -1,6 +1,6 @@
 @charset "UTF-8";
-html {width: 100%; margin: 0 auto; font-family: "Microsoft YaHei", Helvetica, STHeiTi, Arial, sans-serif; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;}
-body {margin: 0; line-height: 1.5; color: #333333; background-color: #ffffff; height: 100%; overflow-x: hidden; -webkit-overflow-scrolling: touch; }
+html {width: 100%; margin: 0 auto; max-width: 750px; font-family: "Microsoft YaHei", Helvetica, STHeiTi, Arial, sans-serif; -ms-text-size-adjust: 100%; -webkit-text-size-adjust: 100%;}
+body {margin: 0; max-width: 750px; line-height: 1.5; color: #333333; background-color: #dfdfdf; height: 100%; overflow-x: hidden; -webkit-overflow-scrolling: touch; }
 
 article, aside, details, figcaption, figure, footer, header, hgroup, main, nav, section, summary { display: block; }
 audio, canvas, progress, video { display: inline-block; vertical-align: baseline; }
@@ -59,11 +59,11 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #
 .cf{zoom:1}
 
 @font-face {font-family: "iconfont";
-  src: url('../fonts/iconfont.eot?t=1498726721608'); /* IE9*/
-  src: url('../fonts/iconfont.eot?t=1498726721608#iefix') format('embedded-opentype'), /* IE6-IE8 */
-  url('../fonts/iconfont.woff?t=1498726721608') format('woff'), /* chrome, firefox */
-  url('../fonts/iconfont.ttf?t=1498726721608') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
-  url('../fonts/iconfont.svg?t=1498726721608#iconfont') format('svg'); /* iOS 4.1- */
+  src: url('../fonts/iconfont.eot?t=1500203915332'); /* IE9*/
+  src: url('../fonts/iconfont.eot?t=1500203915332#iefix') format('embedded-opentype'), /* IE6-IE8 */
+  url('../fonts/iconfont.woff?t=1500203915332') format('woff'), /* chrome, firefox */
+  url('../fonts/iconfont.ttf?t=1500203915332') format('truetype'), /* chrome, firefox, opera, Safari, Android, iOS 4.2+*/
+  url('../fonts/iconfont.svg?t=1500203915332#iconfont') format('svg'); /* iOS 4.1- */
 }
 .iconfont {
   font-family:"iconfont" !important;
@@ -76,9 +76,12 @@ input::-webkit-input-placeholder, textarea::-webkit-input-placeholder { color: #
 .icon-checked:before { content: "\e641"; }
 .icon-find:before { content: "\e60f"; }
 .icon-add:before { content: "\e62f"; }
+.icon-cancel:before { content: "\e67b"; }
 .icon-unchecked:before { content: "\e638"; }
+.icon-menu:before { content: "\e60e"; }
 .icon-friends:before { content: "\e600"; }
 .icon-record:before { content: "\e703"; }
+
 
 /*button*/
 .button {
